--- a/arches_for_science/templates/views/components/plugins/file-configuration.htm
+++ b/arches_for_science/templates/views/components/plugins/file-configuration.htm
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class="file-configuration" style="width: 100%;height: calc(100% - 105px);display:flex;">
-    <div class="uploaded-files" style="width: 32.6793%;padding: 10px;padding-top: 0;">
+    <div class="uploaded-files" style="flex: 1;padding: 10px;padding-top: 0;">
         <h4><span>{% trans "Uploaded Files" %}</span></h4>
         <span>{% trans "Specify how to process the data files for viewing.  Any additional files (such as images) will be automatically displayed if possible." %}</span>
         <div class="file-button-container">
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div style="cursor:col-resize; width:18px;" class="resizer"></div>
-    <div class="active-files" style="width: 31.9659%; display: flex; flex-direction: column">
+    <div class="active-files" style="flex:1; display: flex; flex-direction: column">
         <div data-bind="visible: !(selectedFiles().length > 1) && fileMode() == 'data'">
             <h4 data-bind="text: selectedFile()?.details?.name"></h4>
             <div class="cm" style="border: 1px solid #ddd" >
@@ -117,7 +117,7 @@
         </div>
     </div>
     <div style="cursor:col-resize;width:18px;" class="resizer"></div>
-    <div style="width: 32.3226%;padding: 10px; padding-top: 0;" data-bind="visible: fileMode() == 'data'">
+    <div style="flex: 1, padding: 10px; padding-top: 0;" data-bind="visible: fileMode() == 'data'">
         {% block importerConfiguration %}
         <!-- ko component: {
             name: 'importer-configuration',
