--- a/arches_for_science/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/arches_for_science/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -37,24 +37,27 @@
         <!--ko if: annotations().length > 0-->
         <div style="width:100%; display: flex;">
             <button class="btn" style="background: #9490EE;color: #fff;" data-bind="visible: self.showDatasetDetails, click: function(){self.showDatasetDetails(false)}">
-                <i class="fa fa-list" style="color: #fff"></i> {% trans "Show Sampled Area List" %}</button>
+                <i class="fa fa-list" style="color: #fff"></i> {% trans "Back to Sampled Area List" %}</button>
         </div>
 
-        <div style="margin-top:10px" data-bind="visible: !self.showDatasetDetails()">
-            <label class="control-label">{% trans "Sampled Locations" %}</label>
-            <div style="margin-bottom: 10px; border: 1px solid rgb(221, 221, 221); padding: 5px; background-color: rgb(249, 249, 249);">
-                <span>{% trans "Select a location or area to upload or view files." %}</span>
+        <div data-bind="visible: !self.showDatasetDetails()">
+            <label class="control-label" style="font-size: 1.2em; font-weight: 500;">{% trans "Sampled Locations" %}</label>
+            <div style="margin-bottom: 10px; border: 1px solid #9951C0; padding: 20px; background-color: #FFFF00; border-radius: 2px;">
+                <div style="font-size: 1.15em; text-align: center; color: #440468;">
+                    <i class="fa fa-info-circle"></i><span style="margin-left: 5px;">{% trans "Select a Location or Area" %}</span>
+                </div>
+                <div style="color: #9951C0; text-align: center;"> {% trans "Click on a location or area from the list below to start uploading files. Locked locations/areas were uploaded by others and can't be edited" %}</div>
             </div>
             <input type="text" class="form-control" style="width: 100%;" placeholder="Filter" data-bind="textInput: partFilter">
         </div>
-        <div class="panel">
-            <div style="margin-top: 10px">
+        <div class="panel" style="margin-bottom: 0px;">
+            <div style="margin-top: 5px">
                 <div data-bind="visible: !self.showDatasetDetails()">
                     <div id="parts-panel" data-bind="foreach: {data: parts, as: 'part'}">
                         <!--ko if: self.partFilter() === "" || part.displayname.toLowerCase().includes(self.partFilter().toLowerCase()) -->
                         <div class="panel">
                             <a role="button" data-parent="#parts-panel"  aria-expanded="false" data-bind="click: function(){ $parent.showDatasetDetails(true); $parent.selectedPart(part); }, attr: { href: '#' + part.tileid, 'aria-expanded': $index == 0 ? 'true' : 'false' }">
-                                <div style="height: 25px; padding: 10px;display: flex; align-items:center;" class="file-workbench-file">
+                                <div style="height: 25px; padding: 10px; display: flex; align-items:center;" class="file-workbench-file">
                                     <span style="flex: 1" class="file-name manifest-manager-canvas-name" data-bind="text: part.displayname + ' (' + part.type + ')'"></span>
                                     <div data-bind="visible: !part.hasCurrentObservation()">
                                         <i class="fa fa-lock" style="color: black"></i>
@@ -72,18 +75,20 @@
                 </div>
 
                 <div data-bind="visible: self.showDatasetDetails">
-                    <div style="margin-bottom: 10px; border: 1px solid #ddd; padding: 5px; background-color: #f9f9f9;">
-                        <span>{% trans "Supported image files and PDF files are automatically detected and displayed." %}</span>
+                    <div style="margin-bottom: 10px; border: 1px solid #9951C0; padding: 20px; background-color: #FFFF00; border-radius: 2px;">
+                        <div style="font-size: 1.15em; text-align: center; color: #440468;">
+                            <i class="fa fa-info-circle"></i><span style="margin-left: 5px;">{% trans "File Formats" %}</span>
+                        </div>
+                        <div style="color: #9951C0; text-align: center;">{% trans "Only ASCII files can be presented as interactive charts. Supported image files and PDF files will automatically detected and displayed." %}</div>
                     </div>
-                    <div data-bind="visible: selectedPartHasCurrentObservation()">
+                    <div style="margin-top: 15px;" data-bind="visible: selectedPartHasCurrentObservation()">
                         <div class="dataset-name">
-                            <label class="control-label">{% trans "Dataset Name" %}</label>
+                            <label class="control-label" style="font-size: 1.2em; font-weight: 500;">{% trans "Dataset Name" %}</label>
                             <div style="display: flex">
                                 <input style="flex: 1;" type="text" class="form-control" placeholder="Dataset name" data-bind="enable: self.selectedPartHasCurrentObservation(), textInput: selectedPart().datasetName">
-                                <button style="margin: 0px 5px" class="btn btn-md btn-mint" data-bind="visible: (self.showDatasetDetails() && selectedPart()?.nameDirty()), click: function(){$parent.saveFiles(); }" style="">Save</button>
                             </div>
                             <div style="display: flex;" >
-                                <input class="afs-calculated-datasetname" style="flex: 1" disabled type="text" data-bind="textInput: selectedPartHasCurrentObservation() ? selectedPart().calcDatasetName : selectedPart().datasetName"></input>
+                                <input class="afs-calculated-datasetname" style="flex: 1; margin-bottom: 0px;" disabled type="text" data-bind="textInput: selectedPartHasCurrentObservation() ? selectedPart().calcDatasetName : selectedPart().datasetName"></input>
                             </div>
                         </div>
                         <!-- ko if: uploadFailed -->
@@ -92,7 +97,7 @@
                             {% trans 'Failed to upload files.  Try again or contact an administrator.'%}
                         </div>
                         <!-- /ko -->
-                        <div class="dropzone-photo-upload" style="height: 80px;" data-bind="visible: selectedPartHasCurrentObservation(), dropzone: dropzoneOptions">
+                        <div class="dropzone-photo-upload" style="height: 80px; padding: 30px 15px; background: #C1F25F; border: 1px dashed #619100; border-radius: 2px; margin-bottom: 10px;" data-bind="visible: selectedPartHasCurrentObservation(), dropzone: dropzoneOptions">
                             <div class="file-workbench-links">
                                 <a class="upload-dataset-files dz-clickable" data-bind="css: uniqueidClass">
                                     <span>{% trans "Drag or " %}</span><span class="text-bold">{% trans "click here " %}</span><span>{% trans "to upload files" %}</span>
@@ -104,8 +109,8 @@
                         </div>
                     </div>
                     <div class="panel-collapse collapse" data-bind="visible: ko.unwrap(selectedPart().datasetFiles).length; attr: { id: selectedPart().tileid }, css: { in: $index() == 0}">
-                        <label class="control-label" style="padding-top: 5px; ">{% trans "Files in Dataset" %}</label>
-                        <div class="file-workbench-files" data-bind="foreach: {data: selectedPart().datasetFiles, as: 'file'}">
+                        <label class="control-label" style="font-size: 1.2em; font-weight: 500; padding-top: 5px; ">{% trans "Files in Dataset" %}</label>
+                        <div class="file-workbench-files" style="height: 215px;" data-bind="foreach: {data: selectedPart().datasetFiles, as: 'file'}">
                             <div class='file-workbench-file' style="display: flex;" data-bind="css: {staged: false}">
                                 <div style="flex: 1">
                                     <i data-bind="visible: self.selectedPartHasCurrentObservation(), click: function(){self.selectedPartHasCurrentObservation() ? $parent.deleteFile(file): console.log('no')}" class="fa fa-trash" style="color: black"></i>
@@ -116,8 +121,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div><span data-bind="text: ko.unwrap(selectedPart().datasetFiles).length"></span> {% trans "files loaded" %}</div>
+                        <div style="margin-bottom: 10px;"><span data-bind="text: ko.unwrap(selectedPart().datasetFiles).length"></span> {% trans "files" %}</div>
                     </div>
+                    <button style="width: 150px;" class="btn btn-md btn-mint" data-bind="visible: (self.showDatasetDetails() && selectedPart()?.nameDirty()), click: function(){$parent.saveFiles(); }" style="">Save</button>
                     
                 </div>
             </div>
