updates chemical analysis images workflow #1134

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -729,8 +729,7 @@
 
 .afs-image-service-list-item {
     display: inline-flex;
-    flex-direction: column;
-    align-items: baseline;
+    align-items: center;
     padding-left: 5px;
 }
 
