--- a/arches_for_science/templates/views/components/workflows/add-chemical-analysis-images-workflow/add-chemical-analysis-images-image-step.htm
+++ b/arches_for_science/templates/views/components/workflows/add-chemical-analysis-images-workflow/add-chemical-analysis-images-image-step.htm
@@ -1,12 +1,15 @@
+{% load i18n %}
 
 <div class="afs-image-service-instructions" style="padding-bottom: 8px;">
     <p>
+        {% blocktrans %}
         Select an existing image service for your object that you can use to draw the locations of your observations.
         Or upload image(s) to create a new service.
+        {% endblocktrans %}
     </p>
 
     <!-- ko foreach: [...physicalThingDigitalReferencePreferredManifestResourceData(), ...physicalThingDigitalReferenceAlternateManifestResourceData()] -->
-        <div class="afs-image-service-list-item">
+        <div class="afs-image-service-list-item" style="margin-right: 40px;">
             <input 
                 type="radio" 
                 data-bind="{
@@ -31,7 +34,7 @@
 <button class="btn btn-success" style="margin-left: 28px;" data-bind="click: openManifestManager, disable: $parent.locked">
     <i class="ion-android-cloud-done"></i>
     <span>
-        Create new Image Service
+        {% trans "Create new Image Service" %}
     </span>
 </button>
 
@@ -67,14 +70,17 @@
     data-bind="
     style: {
         transform: !isManifestManagerHidden() ? 'translate(0,0)' : 'translate(0,-100vh)'
-    }">
-<button
-    class="btn btn-labeled btn-primary return-to-workflow-button"
-    data-bind="
-        style: {
-            transform: !isManifestManagerHidden() ? 'translate(0,0)' : 'translate(0,-100vh)'
-        },
-        click: handleExitFromManifestManager
-    "
->Return to Workflow</button>
+    }"
+>
+    <button
+        class="btn btn-labeled btn-primary return-to-workflow-button"
+        data-bind="
+            style: {
+                transform: !isManifestManagerHidden() ? 'translate(0,0)' : 'translate(0,-100vh)'
+            },
+            click: handleExitFromManifestManager
+        "
+    >
+        {% trans "Return to Workflow" %}
+    </button>
 </div>
