--- a/arches_for_science/templates/views/components/workflows/project-report-workflow/download-report.htm
+++ b/arches_for_science/templates/views/components/workflows/project-report-workflow/download-report.htm
@@ -4,36 +4,11 @@
         <span class="h5 file-list-label" data-bind="text: projectName() + $root.translations.reportDownload"></span>
     </div>
 
-    <!-- ko if: (downloadInfo().length + errorInfo().length)  !== templates().length -->
-        <div class="download-report-container">
-            <div class="loading-mask" style="background-color: transparent;"></div>
-
-            <!-- ko if: templates().length <= 1 -->
-            <div>{% trans "A report is being generated. A link will appear when the report is ready to be downloaded." %}</div>
-            <!-- /ko -->
-
-            <!-- ko if: templates().length > 1 -->
-            <div>{% trans "The reports are being generated. A link for each report will appear when the report is ready to be downloaded." %}</div>
-            <!-- /ko -->
-        </div>
-    <!-- /ko -->
-
-    <!-- ko if: (downloadInfo().length + errorInfo().length) === templates().length -->
-        <!-- ko foreach: downloadInfo -->
-            <div class="download-report-button-container">
-                <div class="file-download-button btn btn-success" role="link">
-                    <a style="color: #fff;" target="_blank"
-                        data-bind="
-                            attr:{ href: downloadLink, download: downloadName },
-                            text:  $root.translations.download + ' ' + templateName"
-                    ></a><i class="fa fa-download" style="margin-inline-start: 0.5em; margin-block-start: 0.25em"></i>
-                </div>
-            </div>
-        <!-- /ko -->
-        <!-- ko foreach: errorInfo -->
-            <div class="download-report-container">
-                <div>{% trans "There was a problem generating a report for " %}<span data-bind="text: templateName"></span>{% trans ".  You can try again (refresh this page) or contact an administrator for help." %}</div>
-            </div>
-        <!-- /ko -->
-    <!-- /ko -->
+    <div class="download-report-button-container">
+        <button class="file-download-button btn btn-success" data-bind="click: generateReport">
+            <span style="color: #fff;" data-bind="text: $root.translations.download"></span>
+            <i class="fa fa-download" style="margin-inline-start: 0.5em; margin-block-start: 0.25em"></i>
+        </button>
+        <div style="padding-top: 10px;" data-bind="text: message"></div>
+    </div>
 </div>
