re-fix original issue

--- a/arches_for_science/templates/views/components/plugins/file-configuration.htm
+++ b/arches_for_science/templates/views/components/plugins/file-configuration.htm
@@ -47,7 +47,8 @@
                                                 initSelection: $parent.initSelection,
                                                 value: file.details.rendererConfig,
                                                 closeOnSelect: true,
-                                                allowClear: false,
+                                                placeholder: 'Select an Importer',
+                                                allowClear: true,
                                                 multiple: false 
                                             }
                                         }">
