--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -1046,29 +1046,43 @@
     margin: 0;
 }
 
+.download-project-files-step {
+    padding-left: 20px;
+}
+
 .download-project-files-step .file-list-label {
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: 400;
     color: #2b547c;
-    padding: 10px 10px;
+    padding: 10px 0px 5px 0px;
     margin-bottom: 0px;
 }
 
 .download-project-files-step .expand-select-button {
-    padding: 0.3rem 1rem;
-    font-size: 1rem;
-    background-color: #ebeef0;
-    border-radius: 5px;
+    padding: 0.5rem 3rem;
+    font-size: 1.25rem;
+    background-color: #fafafa;
+    border-radius: 2px;
     cursor: pointer;
+    border: 1px solid #ddd;
+}
+
+.download-project-files-step .expand-select-button:hover {
+    background-color: #f1f1f1;
+}
+
+.download-project-files-step .expand-select-button:active {
+    background-color: #f1f1f1;
 }
 
 .download-project-files-step .file-list-container {
-    padding-bottom: 10px;
+    padding-bottom: 0px;
 }
 
 .download-project-files-step .file-list-container .dataTables_wrapper {
     padding: 0px 20px;
     margin-bottom: 10px;
+    margin-bottom: 25px;
 }
 
 .download-project-files-step .file-download-button {
@@ -1077,14 +1091,18 @@
 }
 
 .download-project-files-step .expand-select-buttons {
-    padding: 10px;}
+    padding: 10px 10px 15px 0px;
+}
 
 .download-project-files-step .observation-list {
-    display: felx;
+    display: flex;
     font-size: 1.4rem;
     color: #2b547c;
     padding: 10px 10px;
     cursor: pointer;
+    border: 1px solid #ddd;
+    background: #f3f3f3;
+    margin-bottom: 5px;
 }
 
 .download-project-files-step .file-listing-link {
