reposition canvas panel

--- a/arches_for_science/media/css/project.css
+++ b/arches_for_science/media/css/project.css
@@ -1121,8 +1121,8 @@
 
 .template-format-heading {
     padding-left: 25px;
-    font-weight: bold;
-    font-size: 1.5em;
+    font-weight: 400;
+    font-size: 1.25em;
     color: #2b547c;
 }
 
@@ -1137,9 +1137,10 @@
 }
 
 .template-option-label {
-    font-size: 1.25em;
-    font-weight: 500;
+    font-size: 1.15em;
+    font-weight: 400;
     color: #004577;
+    margin-left: -20px;
 }
 
 .template-option-description {
